--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <body>
     <p>GEMINI3でクリスマスをテーマにしたゲームを10個作成しました。</p>
-    <a href="sniper.html">1. スナイパーライフルでプレゼントを射出するやつ</a>
-    <a href="survival.html">2. プレゼントを落として子供から逃げ延びるやつ</a>
+    <ul>
+        <li><a href="sniper.html">1. スナイパーライフルでプレゼントを射出するやつ</a></li>
+        <li><a href="survival.html">2. プレゼントを落として子供から逃げ延びるやつ</a></li>
+    </ul>
 </body>
 
 </html>
