feat: Add new XMAS SORTING game with Santa and Thief characters.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="sniper.html">1. スナイパーライフルでプレゼントを射出するやつ</a></li>
         <li><a href="survival.html">2. プレゼントを落として子供から逃げ延びるやつ</a></li>
+        <li><a href="santa_or_shief.html">3. 煙突から来たのがサンタか泥棒か？を判断するやつ</a></li>
     </ul>
 </body>
 
